--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
   "scripts": {
     "start": "start index.js"
   },
-  "dependencies": {},
-  "devDependencies": {}
+  "dependencies": {
+    "express-rate-limit": "^6.4.0",
+    "express-validator": "^6.14.0",
+    "helmet": "^5.0.2",
+    "joi": "^17.6.0",
+    "mongodb": "^4.6.0"
+  }
 }
