--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "template",
-  "version": "0.0.0",
-  "private": true,
+  "name": "wallet-team-proj-back",
+  "version": "0.1.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
     "start": "cross-env NODE_ENV=production node ./server.js",
     "start:dev": "cross-env NODE_ENV=development nodemon ./server.js",
