--- a/package.json
+++ b/package.json
@@ -10,10 +10,23 @@
     "lint:fix": "eslint --fix **/*.js"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
+    "dotenv": "^16.0.1",
     "express": "4.17.1",
-    "morgan": "1.10.0"
+    "express-query-boolean": "^2.0.0",
+    "express-rate-limit": "^6.4.0",
+    "express-validator": "^6.14.0",
+    "helmet": "^5.0.2",
+    "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.6.0",
+    "mongoose": "^6.3.3",
+    "morgan": "1.10.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "7.19.0",
