--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongodb": "^4.6.0",
     "mongoose": "^6.3.3",
     "morgan": "1.10.0",
+    "swagger-ui-express": "4.4.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
