--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wallet-team-proj-back",
   "version": "0.1.0",
-  "description": "",
+  "description": "Silicium Team Project",
   "main": "app.js",
   "scripts": {
     "start": "cross-env NODE_ENV=production node ./app.js",
