--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "description": "Silicium Team Project",
   "main": "app.js",
+  "keywords": ["Wallet web application"],
+  "author": "Silicium Team",
   "scripts": {
     "start": "cross-env NODE_ENV=production node ./app.js",
     "start:dev": "cross-env NODE_ENV=development nodemon ./app.js",
