--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.6.0",
     "mongoose": "^6.3.3",
+    "mongoose-paginate-v2": "^1.6.3",
     "morgan": "1.10.0",
     "swagger-ui-express": "^4.4.0",
     "uuid": "^8.3.2"
